env/code_53c0408806ae4/stderr.txt
main.java:9: error: incompatible types
	    while(1)
	          ^
  required: boolean
  found:    int
1 error
